# document_extractor

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/src/document_extractor/: __init__.py  main.py
backend/src/document_extractor/application/: __init__.py
backend/src/document_extractor/application/common/: __init__.py  acquire_content.py  enrichment_policy.py
backend/src/document_extractor/application/invoice/: __init__.py  extract_invoice.py  extract_invoice_command.py
backend/src/document_extractor/application/purchase_order/: __init__.py  extract_purchase_order.py  extract_purchase_order_command.py
backend/src/document_extractor/domain/: __init__.py
backend/src/document_extractor/domain/common/: __init__.py  enums.py  models.py  ports.py
backend/src/document_extractor/domain/invoice/: __init__.py  assessment.py  merger.py  models.py  ports.py
backend/src/document_extractor/infrastructure/: __init__.py  config.py
backend/src/document_extractor/presentation/: __init__.py  composition.py  routes.py
backend/tests/: test_acquire_content.py  test_api.py  test_enrichment_pipeline.py  test_extract_invoice.py  test_file_signatures.py  test_llm_client_factory.py  test_llm_invoice_enricher.py  test_llm_purchase_order_enricher.py  test_ocr_image_preprocessor.py  test_ocr_reader.py  test_openai_compatible_client.py  test_pdfplumber_reader.py  test_rule_based_invoice_parser.py  test_rule_based_purchase_order_parser.py
(+70 files in other folders)
