[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "zebra-document-extractor-api"
version = "0.1.0"
description = "Document data-extraction API for the Zebra technical assessment"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pdfplumber>=0.11,<1.0",
  "pillow>=11,<13",
  "pypdfium2>=5,<6",
  "pydantic-settings>=2.7,<3.0",
  "pytesseract>=0.3.13,<1.0",
  "python-multipart>=0.0.18,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
